# 10-herencia-polim-salario-herencia_juan

./: CMakeLists.txt  diagrama
src/: DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  Tester.cpp  Tester.h  main.cpp
